--- a/staticfiles/css/dashboard.css
+++ b/staticfiles/css/dashboard.css
@@ -198,7 +198,8 @@ body {
 .content {
     flex: 1;
     overflow-y: auto;
-    padding: 0px 24px 24px 24px;
+    padding: 10px 20px;
+    box-sizing: border-box;
 }
 
 .page-header {
